Gros refactor. Les paramêtres articleID et parentID sont maintenant passé en paramêtres de query
